--- a/css/style.css
+++ b/css/style.css
@@ -18,9 +18,9 @@
   --section-title: 2rem;
 
   /* padding */
-  --default-padding: 2rem 4rem;
+  --default-padding: 2rem 1rem;
   --button-padding: 0.8rem 1rem;
-  --section-padding: 9rem 0;
+  --section-padding: 5rem 0;
   --description-padding: 10rem;
 
   /* Font Family */
@@ -32,6 +32,17 @@
 
   /* Transition */
   --transition: all 0.2s ease-in-out;
+/*Responsive */
+  @media screen and (max-width: 1024px) {
+    .nav__list {
+      display: none;
+    }
+    .nav__hamburger {
+      display: block;
+    }
+    
+  
+  }
 }
 
 /* ---------------- Reset all styles --------*/
@@ -71,8 +82,7 @@ li {
 }
 
 .nav {
-  width: 30%;
-  height: 100%;
+  text-align: right;
 }
 
 .nav__list {
@@ -345,6 +355,8 @@ li {
   .nav__hamburger {
     display: block;
   }
+
+
 }
 
 @media screen and (min-width: 1025px) {
@@ -354,4 +366,13 @@ li {
   .nav__hamburger {
     display: none;
   }
+  .header {
+    padding: 1rem;
+  }
+  .hero  {
+    background-image: url(./../images/mobile/image-header.jpg);
+    padding:0 1.4rem ;
+    height: 70vh;
+
+
 }
