--- a/css/style.css
+++ b/css/style.css
@@ -18,9 +18,9 @@
   --section-title: 2rem;
 
   /* padding */
-  --default-padding: 2rem 1rem;
+  --default-padding: 2rem 4rem;
   --button-padding: 0.8rem 1rem;
-  --section-padding: 5rem 0;
+  --section-padding: 9rem 0;
   --description-padding: 10rem;
 
   /* Font Family */
@@ -29,20 +29,6 @@
 
   /* Border */
   --default-border-radius: 30px;
-
-  /* Transition */
-  --transition: all 0.2s ease-in-out;
-/*Responsive */
-  @media screen and (max-width: 1024px) {
-    .nav__list {
-      display: none;
-    }
-    .nav__hamburger {
-      display: block;
-    }
-    
-  
-  }
 }
 
 /* ---------------- Reset all styles --------*/
@@ -82,7 +68,8 @@ li {
 }
 
 .nav {
-  text-align: right;
+  width: 30%;
+  height: 100%;
 }
 
 .nav__list {
@@ -97,7 +84,7 @@ li {
   color: var(--white-color);
   padding: var(--button-padding);
   border-radius: var(--default-border-radius);
-  transition: var(--transition);
+  transition: all 0.2s ease-in-out;
 }
 
 .nav__item--white-bg {
@@ -170,15 +157,9 @@ li {
 
 .about__link {
   font-family: var(--secondary-font);
-}
-
-.about__link--color-yellow {
   box-shadow: 0 8px 5px 1px var(--yellow-color);
 }
 
-.about__link--color-pink {
-  box-shadow: 0 8px 5px 1px var(--pink-color);
-}
 .about__image-img {
   width: 100%;
   height: 100%;
@@ -237,142 +218,4 @@ li {
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
-}
-
-/* Testimonies */
-
-.testimonies {
-  padding: var(--section-padding);
-}
-
-.testimonies__title {
-  text-align: center;
-  text-transform: uppercase;
-  font-weight: 900;
-  font-family: var(--secondary-font);
-  color: var(--black-variant-color);
-  font-size: 1.3rem;
-  letter-spacing: 0.6rem;
-}
-
-.testimonies__container {
-  padding: 3rem 6rem;
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-}
-
-.testimonie {
-  text-align: center;
-  flex-basis: 20rem;
-}
-
-.testimonie__avatar {
-  width: 5rem;
-  height: 5rem;
-  border-radius: 100%;
-}
-
-.testimonie__quote {
-  font-family: var(--primary-font);
-  color: var(--black-variant-color);
-  margin: 1.7rem 0;
-}
-
-.testimonie__author {
-  font-family: var(--secondary-font);
-  font-style: normal;
-  font-weight: 900;
-  font-size: 1rem;
-  margin-bottom: 2rem;
-}
-
-.testimonie__author-role {
-  text-transform: capitalize;
-  font-family: var(--primary-font);
-  font-size: 0.6rem;
-  color: #83828a;
-}
-
-/* Galleries */
-
-.gallery {
-  display: flex;
-}
-
-.gallery__item {
-  flex-basis: 25%;
-}
-
-.gallery__picture {
-  width: 100%;
-  height: 100%;
-}
-
-/* ---------- Footer --------------- */
-
-.footer {
-  background-color: #90d4c5;
-  color: var(--white-color);
-  padding: var(--section-padding);
-  text-align: center;
-}
-
-.footer__nav {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 2rem;
-  text-align: center;
-  margin: 1rem 0;
-}
-
-.footer__list {
-  width: 20%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.footer__item {
-  font-family: var(--primary-font);
-  padding: 0 1rem;
-  font-size: 0.9rem;
-  color: var(--black-degraded) !important;
-  transition: var(--transition);
-}
-
-.footer__item:hover {
-  color: var(--white-color) !important;
-}
-
-/* ------------------ Responsive ---------------------  */
-
-@media screen and (max-width: 1024px) {
-  .nav__list {
-    display: none;
-  }
-  .nav__hamburger {
-    display: block;
-  }
-
-
-}
-
-@media screen and (min-width: 1025px) {
-  .nav__list {
-    display: flex;
-  }
-  .nav__hamburger {
-    display: none;
-  }
-  .header {
-    padding: 1rem;
-  }
-  .hero  {
-    background-image: url(./../images/mobile/image-header.jpg);
-    padding:0 1.4rem ;
-    height: 70vh;
-
-
 }
