--- a/css/style.css
+++ b/css/style.css
@@ -355,8 +355,47 @@ li {
   .nav__hamburger {
     display: block;
   }
+  .nav {
+    text-align: right;
+  }
+  .hero {
+    background-image: url(./../images/mobile/image-header.jpg);
+    padding: 9rem 1rem;
+    text-align: center;
+  }
 
+  .about__title {
+    font-size: 3rem;
+  }
+  .about__text {
+    font-size: 1.5rem;
+  }
 
+  .about {
+    flex-direction: column-reverse;
+  }
+  .about__image {
+    text-align: center;  
+  }
+  #about {
+    flex-direction: column;
+  }
+  #expertise__container {
+    flex-direction: column;
+  }
+  /* .expertise--bg-apple {
+    background-image: url(./../images/mobile/image-graphic-design.jpg);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+  }
+  .expertise--bg-orange {
+    background-image: url(./../images/mobile/image-photography.jpg);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+  } */
+  
 }
 
 @media screen and (min-width: 1025px) {
@@ -366,13 +405,4 @@ li {
   .nav__hamburger {
     display: none;
   }
-  .header {
-    padding: 1rem;
-  }
-  .hero  {
-    background-image: url(./../images/mobile/image-header.jpg);
-    padding:0 1.4rem ;
-    height: 70vh;
-
-
 }
