--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-/* -------------- Set Variables ----------- */
 :root {
   /* colors  */
   --blue-color: #3dbeff;
@@ -264,8 +263,8 @@ li {
   font-weight: 900;
   font-family: var(--secondary-font);
   color: var(--black-variant-color);
-  font-size: 1.3rem;
-  letter-spacing: 0.6rem;
+  font-size: 1rem;
+  letter-spacing: 0.4rem;
 }
 
 .testimonies__container {
@@ -289,7 +288,7 @@ li {
 .testimonie__quote {
   font-family: var(--primary-font);
   color: var(--black-variant-color);
-  margin: 1.7rem 0;
+  margin: 1rem 0;
 }
 
 .testimonie__author {
@@ -305,6 +304,7 @@ li {
   font-family: var(--primary-font);
   font-size: 0.6rem;
   color: #83828a;
+  margin-bottom: 2rem;
 }
 
 /* Galleries */
@@ -387,3 +387,43 @@ li {
   .about {
     flex-direction: column-reverse;
   }
+  .about__image {
+    text-align: center;  
+  }
+  #about {
+    flex-direction: column;
+  }
+  #expertise__container {
+    flex-direction: column;
+  }
+  .expertise--bg-apple {
+    background-image: url(./../images/mobile/image-graphic-design.jpg);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+  }
+  .expertise--bg-orange {
+    background-image: url(./../images/mobile/image-photography.jpg);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+  } 
+  .gallery{
+    display: flex;
+  }
+  
+  
+  .footer__list{
+    margin-right: 40%;
+  }
+  
+}
+
+@media screen and (min-width: 1025px) {
+  .nav__list {
+    display:grid;
+  }
+  .nav__hamburger {
+    display: none;
+  }
+}
