--- a/css/style.css
+++ b/css/style.css
@@ -177,7 +177,8 @@ li {
 .about__text {
   font-family: var(--primary-font);
   color: var(--black-variant-color);
-  margin: 1.5rem 0;
+  margin: 1rem 0;
+
 }
 
 .about__link {
@@ -378,10 +379,24 @@ li {
   }
 
   .about__title {
-    font-size: 3rem;
+    font-size: 2rem;
+    text-align: center;
   }
   .about__text {
-    font-size: 1.5rem;
+    font-size: 1rem;
+    text-align: center;
+  }
+  .about__link {
+    font-family: var(--secondary-font);
+    margin-right: 50%;
+  }
+  
+  .about__link--color-yellow {
+    box-shadow: 0 8px 5px 1px var(--yellow-color);
+  }
+  
+  .about__link--color-pink {
+    box-shadow: 0 8px 5px 1px var(--pink-color);
   }
 
   .about {
