--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* -------------- Set Variables ----------- */
 :root {
   /* colors  */
   --blue-color: #3dbeff;
@@ -177,8 +178,7 @@ li {
 .about__text {
   font-family: var(--primary-font);
   color: var(--black-variant-color);
-  margin: 1rem 0;
-
+  margin: 1.5rem 0;
 }
 
 .about__link {
@@ -264,8 +264,8 @@ li {
   font-weight: 900;
   font-family: var(--secondary-font);
   color: var(--black-variant-color);
-  font-size: 1rem;
-  letter-spacing: 0.4rem;
+  font-size: 1.3rem;
+  letter-spacing: 0.6rem;
 }
 
 .testimonies__container {
@@ -289,7 +289,7 @@ li {
 .testimonie__quote {
   font-family: var(--primary-font);
   color: var(--black-variant-color);
-  margin: 1rem 0;
+  margin: 1.7rem 0;
 }
 
 .testimonie__author {
@@ -305,7 +305,6 @@ li {
   font-family: var(--primary-font);
   font-size: 0.6rem;
   color: #83828a;
-  margin-bottom: 2rem;
 }
 
 /* Galleries */
@@ -359,6 +358,13 @@ li {
 .footer__item:hover {
   color: var(--white-color) !important;
 }
+.ulbouton {
+  display: flex;
+  justify-content: space-between;
+  width: 30%;
+  padding-left: 650px;
+} 
+
 
 /* ------------------ Responsive ---------------------  */
 
@@ -379,28 +385,14 @@ li {
   }
 
   .about__title {
-    font-size: 2rem;
-    text-align: center;
+    font-size: 3rem;
   }
   .about__text {
-    font-size: 1rem;
-    text-align: center;
-  }
-  
-  
-  .about__link--color-yellow {
-    box-shadow: 0 8px 5px 1px var(--yellow-color);
-  }
-  
-  .about__link--color-pink {
-    box-shadow: 0 8px 5px 1px var(--pink-color);
+    font-size: 1.5rem;
   }
 
   .about {
     flex-direction: column-reverse;
-  }
-  .about__image {
-    text-align: center;  
   }
   #about {
     flex-direction: column;
@@ -414,25 +406,111 @@ li {
     background-position: center center;
     background-size: cover;
   }
+  
   .expertise--bg-orange {
     background-image: url(./../images/mobile/image-photography.jpg);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
-  } 
-  
-
-  .footer__list{
-    margin-right: 40%;
+  }
+  .expertise__description {
+    padding-top: 25rem;
+  }
+  .about__description {
+    text-align: center;
+  }
+  .gmobile {
+    display: flex;
+  }
+  .gallery {
+    display: none;
+  }
+  .gallery__item {
+    flex-basis: 25%;
   }
   
+  .gallery__picture {
+    width: 100%;
+    height: 100%;
+  }
+  .gmobile {
+    display: grid;
+    grid-template-columns: 50% 50%;
+  }
+  .footer {
+    background-color: #90d4c5;
+    color: var(--white-color);
+    padding-right: 20px;
+    font-size: 2rem;
+    text-align: center;
+  }
+  
+  .footer__nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 3rem;
+    text-align: center;
+    margin: 3rem 0;
+    padding-right: 190px;
+  } 
+  .ulbouton {
+    display: flex;
+    justify-content: space-between;
+    width: 20%;
+    padding-left: 100px;
+  } 
+}
+
+@media screen and (max-width: 1190px) {
+  .expertise__description {
+    padding-top: 50rem;
+  }
+.testimonies__container {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  }
+  .footer {
+    background-color: #90d4c5;
+    color: var(--white-color);
+    padding-left: 20px;
+    font-size: 2rem;
+    text-align: center;
+  }
+  
+  .footer__nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 3rem;
+    text-align: center;
+    margin: 3rem 0;
+    padding-left: 70px;
+  }  
+  .footer__list {
+    text-align: center;
+  }
+  .ulbouton {
+    display: flex;
+    justify-content: space-between;
+    width: 20%;
+    padding-left: 350px;
+    
+  }
 }
 
 @media screen and (min-width: 1025px) {
   .nav__list {
-    display:grid;
+    display: flex;
   }
   .nav__hamburger {
     display: none;
+  }
+  .gmobile {
+    display: none;
+  }
+  .gallery {
+    display: flex;
   }
 }
